syntax = "proto3";
import "google/protobuf/empty.proto";

package chat;


service Chat{
	rpc ReceiveIncomingMessages(ReceiveMessageRequest) returns (stream IncomingMessage);
	rpc SendMessage(IncomingMessage) returns (Empty);

}

message ReceiveMessageRequest{
	string id=1;
}

message Empty{

}

message IncomingMessage{
	string from_addr=1;
	string to_addr=2;
	bytes msg=3;
}